tests/sawn/fixtures/invalid/04_table_with_single_brackets.sawn
// INVALID: Table-style data using [] instead of [][]
films[] episode,title,director
  4,"A New Hope","George Lucas"
